<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="grover.Buhlo13.MainActivity">
    <item android:id="@+id/action_clearDB"
          android:title="@string/ClearDb"
          android:orderInCategory="100"
          app:showAsAction="never"
    />
    <item android:id="@+id/action_clearSettings"
          android:title="@string/ClearSettings"
          android:orderInCategory="100"
          app:showAsAction="never"
    />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"
    />
    <item android:id="@+id/action_restoreDb"
          android:title="@string/restoreDb"
          android:orderInCategory="100"
          app:showAsAction="never"
    />

</menu>
